com/binary-file/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wsi
  name: deployment-stress
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-stress
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-stress
        wsi/version: v1
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        wsi/dedicated: addon
      containers:
      - image: 654654635343.dkr.ecr.ap-northeast-2.amazonaws.com/wsi-stress:latest
        imagePullPolicy: Always
        name: app-stress
        securityContext:
          runAsUser: 1000
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "50Mi"
            cpu: "100m"
